test/sema/interface-impl-decl-error-builtin-type.delta
// RUN: %check_errors %not %delta -typecheck %s

// CHECK: [[@LINE+1]]:14: error: 'int' is not an interface
struct Z<T>: int {}

void main() {
    var z = Z<int>();
}
